--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
     name: Coverage Report & Summary
     runs-on: ubuntu-latest
     needs: [unit-tests, selenium-tests]
+    if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Download unit .coverage data
