modify yml to fix ci cd pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ jobs:
         script: |
           cd /home/ubuntu/transPort
           git pull origin main
-          source venv/bin/activate
+          # source venv/bin/activate
           ./venv/bin/pip install -r requirements.txt
-          pkill -f "python app.py" || true
-          nohup ./venv/bin/python app.py > app.log 2>&1 &
+          sudo systemctl restart transport
