--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.17"
   }
 }
